--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                     <button type="submit" class="bg-lime-400 rounded-3xl py-3 px-8 font-medium inline-block mr-4 hover:bg-transparent hover:border-black hover:text-black duration-300 hover:border border border-transparent">Learn More</button>
                 </form>
             </div>
+            <br>
+            <div>
+                <a onclick="changebg()" class="bg-lime-400 rounded-3xl py-3 px-8 font-medium inline-block mr-4 hover:bg-transparent hover:border-black hover:text-black duration-300 hover:border border border-transparent">Change BG</a>
+            </div>
         </div>
     </div>
     <div class="h-screen bg-gradient-to-b from-white to-lime-200">
